k8NET/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8net-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.k8net.com
    secretName: k8net-dev-secrets
  rules:
  - host: "dev.k8net.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8net-web-service
            port:
              number: 8080
